# personal-finance

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: csv_parsers.rs  main.rs  transaction.rs
frontend/personal-finance/: package-lock.json  package.json
src/: csv_parsers.rs  main.rs  transaction.rs
