[package]
name = "personal-finance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
csv = "1.2.2"
currency = "0.4.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.100"
